[gd_scene load_steps=5 format=3 uid="uid://cjytli5qnj0cq"]

[ext_resource type="Script" path="res://abilities/cleave/cleave.gd" id="1_o1y1c"]
[ext_resource type="PackedScene" uid="uid://01mfloxbcrcs" path="res://projectiles/cleave/cleave.tscn" id="2_jgwcj"]
[ext_resource type="Script" path="res://actions/numbers/providers/constant.gd" id="2_u6dg8"]

[sub_resource type="Resource" id="Resource_incxj"]
script = ExtResource("2_u6dg8")
constant = 10.0

[node name="Cleave" type="Node2D"]
script = ExtResource("1_o1y1c")
cleave_projectile_scene = ExtResource("2_jgwcj")
cast_time = 0.35
recharge_time = 1.0
uid = &"Cleave"
description = "Swing your sword at your enemies, cleaving all who may foolishly come too close."
cost = SubResource("Resource_incxj")

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
